// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`prettier snapshot 1`] = `
{
  "overrides": [],
  "printWidth": 140,
}
`;

exports[`prettier snapshot with ignore 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
build
"
`;

exports[`prettier snapshot with ignore 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
src/example.ts
"
`;

exports[`prettier snapshot with ignore pattern (via prettierOptions) 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
build
"
`;
